--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,18 +22,32 @@
         app:cet_textcolor="#00ff00"
         app:cet_textsize="20sp"
         app:cet_drawsize="30dp"
+        app:cet_editable="false"
         android:paddingStart="15dp"
         android:paddingTop="10dp"
         android:paddingBottom="10dp"
         android:background="@drawable/selector_gray_rounded"/>
-    
-    <androidx.appcompat.widget.AppCompatEditText
+
+    <com.savion.countableedit.CountableEditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/selector_gray_rounded"
         android:layout_margin="20dp"
-        android:focusable="true"
-        android:focusableInTouchMode="true"
-        android:padding="10dp" />
+        app:cet_count_textcolor="#0000ff"
+        app:cet_count_textsize="10sp"
+        app:cet_drawpadding="10dp"
+        app:cet_drawstart="@mipmap/ic_launcher"
+        app:cet_hint="cet hint222222"
+        app:cet_hintcolor="#ff0000"
+        app:cet_max_length="10"
+        app:cet_countable="false"
+        app:cet_text="cet text"
+        app:cet_textcolor="#00ff00"
+        app:cet_textsize="20sp"
+        app:cet_drawsize="30dp"
+        app:cet_editable="true"
+        android:paddingStart="15dp"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
+        android:background="@drawable/selector_gray_rounded"/>
 
 </LinearLayout>
