新增清除按钮 新增状态监听 升级版本: 1.1-->1.2

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,47 +7,77 @@
     android:orientation="vertical">
 
     <com.savion.countableedit.CountableEditText
+        android:id="@+id/test1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
-        app:cet_count_textcolor="#0000ff"
-        app:cet_count_textsize="10sp"
-        app:cet_drawpadding="10dp"
-        app:cet_drawstart="@mipmap/ic_launcher"
-        app:cet_hint="cet hint"
-        app:cet_hintcolor="#ff0000"
-        app:cet_max_length="10"
-        app:cet_countable="false"
-        app:cet_text="cet text"
-        app:cet_textcolor="#00ff00"
-        app:cet_textsize="20sp"
-        app:cet_drawsize="30dp"
-        app:cet_editable="false"
+        android:background="@drawable/selector_gray_rounded"
         android:paddingStart="15dp"
         android:paddingTop="10dp"
         android:paddingBottom="10dp"
-        android:background="@drawable/selector_gray_rounded"/>
+        app:cet_count_textcolor="#0000ff"
+        app:cet_count_textsize="10sp"
+        app:cet_countable="false"
+        app:cet_drawpadding="10dp"
+        app:cet_drawsize="30dp"
+        app:cet_drawstart="@mipmap/ic_launcher"
+        app:cet_editable="false"
+        app:cet_hint="cet hint"
+        app:cet_hintcolor="#ff0000"
+        app:cet_max_length="10"
+        app:cet_text="cet text"
+        app:cet_textcolor="#00ff00"
+        app:cet_textsize="20sp" />
 
     <com.savion.countableedit.CountableEditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
-        app:cet_count_textcolor="#0000ff"
-        app:cet_count_textsize="10sp"
-        app:cet_drawpadding="10dp"
-        app:cet_drawstart="@mipmap/ic_launcher"
-        app:cet_hint="cet hint222222"
-        app:cet_hintcolor="#ff0000"
-        app:cet_max_length="10"
-        app:cet_countable="false"
-        app:cet_text="cet text"
-        app:cet_textcolor="#00ff00"
-        app:cet_textsize="20sp"
-        app:cet_drawsize="30dp"
-        app:cet_editable="true"
+        android:background="@drawable/selector_gray_rounded"
         android:paddingStart="15dp"
         android:paddingTop="10dp"
         android:paddingBottom="10dp"
-        android:background="@drawable/selector_gray_rounded"/>
+        app:cet_clearDrawable="@mipmap/clear"
+        app:cet_clearDrawableHeight="30dp"
+        app:cet_clearDrawablePaddingBottom="5dp"
+        app:cet_clearDrawablePaddingEnd="5dp"
+        app:cet_clearDrawablePaddingStart="5dp"
+        app:cet_clearDrawablePaddingTop="5dp"
+        app:cet_clearDrawableWidth="40dp"
+        app:cet_count_textcolor="#0000ff"
+        app:cet_count_textsize="10sp"
+        app:cet_countable="false"
+        app:cet_drawpadding="10dp"
+        app:cet_drawsize="30dp"
+        app:cet_drawstart="@mipmap/ic_launcher"
+        app:cet_editable="true"
+        app:cet_hint="cet hint222222"
+        app:cet_hintcolor="#ff0000"
+        app:cet_max_length="10"
+        app:cet_text="cet text"
+        app:cet_textcolor="#00ff00"
+        app:cet_textsize="20sp" />
+
+    <com.savion.countableedit.CountableEditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="20dp"
+        android:background="@drawable/selector_gray_rounded"
+        android:paddingStart="15dp"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
+        app:cet_count_textcolor="#0000ff"
+        app:cet_count_textsize="10sp"
+        app:cet_countable="false"
+        app:cet_drawpadding="10dp"
+        app:cet_drawsize="30dp"
+        app:cet_drawstart="@mipmap/ic_launcher"
+        app:cet_editable="true"
+        app:cet_hint="cet hint222222"
+        app:cet_hintcolor="#ff0000"
+        app:cet_max_length="10"
+        app:cet_text="cet text"
+        app:cet_textcolor="#00ff00"
+        app:cet_textsize="20sp" />
 
 </LinearLayout>
