--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,27 +7,27 @@
     android:orientation="vertical">
 
     <com.savion.countableedit.CountableEditText
-        android:id="@+id/test1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:id="@+id/main_home_btn_search_collapsed"
         android:layout_margin="20dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:background="@drawable/selector_gray_rounded"
-        android:paddingStart="15dp"
-        android:paddingTop="10dp"
-        android:paddingBottom="10dp"
-        app:cet_count_textcolor="#0000ff"
-        app:cet_count_textsize="10sp"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
+        android:paddingTop="7dp"
+        android:paddingBottom="7dp"
         app:cet_countable="false"
-        app:cet_drawpadding="10dp"
+        app:cet_drawpadding="6dp"
         app:cet_drawsize="30dp"
         app:cet_drawstart="@mipmap/ic_launcher"
+        app:cet_hint="搜索"
         app:cet_editable="false"
-        app:cet_hint="cet hint"
+        android:layout_marginEnd="15dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/main_home_btn_import"
+        app:layout_constraintBottom_toBottomOf="@+id/main_home_btn_import"
         app:cet_hintcolor="#ff0000"
-        app:cet_max_length="10"
-        app:cet_text="cet text"
-        app:cet_textcolor="#00ff00"
-        app:cet_textsize="20sp" />
+        app:cet_textsize="14sp" />
 
     <com.savion.countableedit.CountableEditText
         android:layout_width="match_parent"
@@ -51,7 +51,7 @@
         app:cet_drawsize="30dp"
         app:cet_drawstart="@mipmap/ic_launcher"
         app:cet_editable="true"
-        app:cet_hint="cet hint222222"
+        app:cet_hint="cet hint"
         app:cet_hintcolor="#ff0000"
         app:cet_max_length="10"
         app:cet_text="cet text"
